--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,41 @@
     <title>abdallah</title>
 
 </head>
+
 <body>
     <header class="header">
-<a href="#" class="logo">Abdallah .</a>
-<nav class="navbar">
-<a href="#" class="active">home</a>
-<a href="#">about</a>
-<a href="#">services</a>
-<a href="#">portfolio</a>
-<a href="#">contact me</a>
+        <a href="#" class="logo">Abdallah .</a>
+        <nav class="navbar">
+            <a href="#" class="active">home</a>
+            <a href="#">about</a>
+            <a href="#">services</a>
+            <a href="#">portfolio</a>
+            <a href="#">contact me</a>
 
-</nav>
+        </nav>
 
     </header>
- 
+
     <section class="home">
-    <div class="home-content">
-    <h1>Hi, I'm Abdallah Salem</h1>
-    <h3>Full Stack Developer</h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eligendi exercitationem ipsam voluptatibus dolore incidunt maxime quos obcaecati aut, sint omnis soluta suscipit, praesentium quia ratione ad illum laborum?</p>
+        <div class="home-content">
+            <h1>Hi, I'm Abdallah Salem</h1>
+            <h3>Full Stack Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eligendi exercitationem ipsam
+                voluptatibus dolore incidunt maxime quos obcaecati aut, sint omnis soluta suscipit, praesentium quia
+                ratione ad illum laborum?</p>
 
-    
-<div class="btn">
-<a href="#"> Hire Me</a>
-<a href="#">Let's Talk</a>
-</div>
-</div>
+
+            <div class="btn">
+                <a href="#"> Hire Me</a>
+                <a href="#">Let's Talk</a>
+            </div>
+        </div>
     </section>
-
+    <div>
+        <h1>abdallah ramdan </h1>
+        <p>full stack Developer</p>
+    </div>
 
 </body>
+
 </html>
