--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div>
         <h1>abdallah ramdan </h1>
         <p>full stack Developer</p>
+        <span>muslim</span>
     </div>
 
 </body>
